--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ description:
   </p>
   
   <p align="justify">
-  I Lead Data Analytics practice at Internal Audit Department, NTUC Fairprice Group.
+  I Lead Data Analytics function at Internal Audit Department, NTUC Fairprice Group.
   <br><br>
-  I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
+  I am experience in creating data driven contents and solutions including building data pipelines to machine learning model deployment.
   <br><br>
   </p>
   
