--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align="center"> Gavin Ng </p>
 
-logo: "/images/picture.png?raw=true"
+logo: "https://avatars.githubusercontent.com/u/70006499?s=400&u=541b359b36a073fd536c288ca63d1d73613e76d0&v=4?raw=true"
 
 description:
   <p align="center">
