--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ logo: "https://avatars.githubusercontent.com/u/70006499?s=400&u=541b359b36a073fd
 
 description:
   <p align="center">
+  <div class="social-icons mb-5">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/gavin321/" target="_blank">
     <i class="fab fa-linkedin-in"></i>
