--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ logo: "https://avatars.githubusercontent.com/u/70006499?s=400&u=541b359b36a073fd
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/gavin321/" target="_blank">
+  <a href="https://www.linkedin.com/in/gavin321/">Linkedin</a> |
   <a href="https://public.tableau.com/profile/gavin.ng321/">Tableau</a> |
   <a href="https://tinyurl.com/yc8l9h7y/">Power BI</a> |
   <a href="https://github.com/nspgav">GitHub</a> |
