--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description:
   </p>
   
   <p align="justify">
-  I Lead Data Analytics function at Internal Audit Department, NTUC Fairprice Group.
+  I Lead the Data Analytics function at Internal Audit Department, NTUC Fairprice Group.
   <br><br>
   </p>
   
