--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align="center"> Gavin Ng </p>
 
-logo: "https://public.tableau.com/avatar/d3da0025-f5f1-4a96-b736-c6d7995f6c15.jpeg"
+logo: "https://public.tableau.com/avatar/d3da0025-f5f1-4a96-b736-c6d7995f6c15.jpeg?raw=true"
 
 description:
   <p align="center">
