--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <p align="center"> Gavin Ng </p>
+title: <p align="left"> Gavin Ng </p>
 
 logo: "https://public.tableau.com/avatar/d3da0025-f5f1-4a96-b736-c6d7995f6c15.jpeg?raw=true"
 
