--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,11 @@ description:
   <a href="https://www.linkedin.com/in/gavin321/">Linkedin</a> |
   <a href="https://public.tableau.com/profile/gavin.ng321/">Tableau</a> |
   <a href="https://tinyurl.com/yc8l9h7y/">Power BI</a> |
-  <a href="https://github.com/nspgav">GitHub</a> |
-  <a href="https://www.linkedin.com/company/fairprice-group/">NTUC Fairprice Group</a>
+  <a href="https://github.com/nspgav">GitHub</a>
   </p>
   
   <p align="justify">
-  I Lead the Data Analytics function at Internal Audit Department, NTUC Fairprice Group.
+  I Lead the Data Analytics function at Internal Audit Department, <a href="https://www.linkedin.com/company/fairprice-group/">NTUC Fairprice Group</a>
   <br><br>
   </p>
   
