--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ description:
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/gavin321/">Linkedin</a> |
   <a href="https://public.tableau.com/profile/gavin.ng321/">Tableau</a> |
-  <a href="https://tinyurl.com/yc8l9h7y/">Power BI</a> |
-  <a href="https://github.com/nspgav">GitHub</a>
+  <a href="https://tinyurl.com/yc8l9h7y/">Power BI</a> 
   </p>
   
   <p align="justify">
