--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ description:
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics:  # Google Analytics tracking ID
+google_analytics: UA-125798845-1 # Google Analytics tracking ID
