--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description:
   </p>
   
   <p align="justify">
-  I am the Data Analytics Lead in Group Internal Audit at <a href="https://www.linkedin.com/company/fairprice-group/">NTUC Fairprice Group</a>
+  I am the Data Analytics Lead in Internal Audit Department at <a href="https://www.linkedin.com/company/fairprice-group/">NTUC Fairprice Group</a>
   <br><br>
   </p>
   
